*SVN*

* Oracle: automatically detect the primary key.  #6594 [vesaria, Michael Schoen]

* Oracle: to increase performance, prefetch 100 rows and enable similar cursor sharing. Both are configurable in database.yml.  #6607 [philbogle@gmail.com, ray.fortna@jobster.com, Michael Schoen]

* Don't inspect unloaded associations.  #2905 [lmarlow]

* SQLite: use AUTOINCREMENT primary key in >= 3.1.0.  #6588, #6616 [careo, lukfugl]

* Cache inheritance_column.  #6592 [Stefan Kaes]

* Firebird: decimal/numeric support.  #6408 [macrnic]

* make add_order a tad faster. #6567 [Stefan Kaes]

* Find with :include respects scoped :order.  #5850

* Support nil and Array in :conditions => { attr => value } hashes.  #6548 [Assaf, Jeremy Kemper]
    find(:all, :conditions => { :topic_id => [1, 2, 3], :last_read => nil }

* Consistently use LOWER() for uniqueness validations (rather than mixing with UPPER()) so the database can always use a functional index on the lowercased column.  #6495 [Si]

* SQLite: fix calculations workaround, remove count(distinct) query rewrite, cleanup test connection scripts.  [Jeremy Kemper]

* SQLite: count(distinct) queries supported in >= 3.2.6.  #6544 [Bob Silva]

* Dynamically generate reader methods for serialized attributes.  #6362 [Stefan Kaes]

* Deprecation: object transactions warning.  [Jeremy Kemper]

* has_one :dependent => :nullify ignores nil associates.  #6528 [janovetz, Jeremy Kemper]

* Oracle: resolve test failures, use prefetched primary key for inserts, check for null defaults, fix limited id selection for eager loading. Factor out some common methods from all adapters.  #6515 [Michael Schoen]

* Make add_column use the options hash with the Sqlite Adapter. Closes #6464 [obrie]

* Document other options available to migration's add_column. #6419 [grg]

* MySQL: all_hashes compatibility with old MysqlRes class.  #6429, #6601 [Jeremy Kemper]
